refactor: 重构代码以提升可维护性和性能
- 新增 ExecutorInterruptedException 异常类用于包装中断异常
- 将常量字符串提取为静态字段避免重复定义
- 优化循环和条件判断逻辑，减少嵌套层次
- 修复 JPA 实体 ID 字段访问权限问题
- 改进测试中的等待机制，使用条件等待替代硬编码 sleep
- 重构 RedisOAuth2AuthorizationService 的 token 处理逻辑
- 统一使用 AtomicReference 替代 volatile 变量
- 移除未使用的导出函数和冗余代码
- 添加私有构造函数防止工具类实例化